Fri Jun 27 09:12:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/java/jbi/utils/RegisterMioType.java:
        
          Converted the output of the target schema to register into a 
          info log message.

Fri Jun 27 00:25:45 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/jbi/RegisterMioType.sh:
        * cuts/java/jbi/utils/RegisterMioType.java:

          Helper class/application for registering MIO types with the
          server.

        * cuts/java/jbi/utils:
        * cuts/cuts.java.jbi.build:
        * cuts/java/jbi/utils/ConnectionString.java:
        * cuts/java/jbi/utils/UserCredentials.java:

          Implemented several utility classes to simplify interacting
          with the server.

Fri Jun 27 07:20:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/jbi/SingleProcess.sh:

          The classpath as missing the JAR files needed to instantiate the
          objects from the Caster library.

        * etc/ANT/include/cuts.build:

          The ${cuts.src.dir} was not defined in this file.

Thu Jun 26 19:16:01 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/jbi/SingleProcess.sh:

          The $JAVA_OPTS environment variable can be used to pass command
          parameters to the java virtual machine.

Thu Jun 26 14:08:50 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/jbi/SingleProcess.sh:

          Initial version of a helper script for manually deploying JBI
          client objects into a single process.

        * etc/ANT/include/cuts.build:

          Fixed configuration errors related to the new names of the
          CUTS jar files.

Thu Jun 26 04:30:33 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * contrib/java/castor-1.2-xml-schema.jar:

          Missing JAR file for building the CAPI clients.

        * etc/ANT/include/castor.build:
        * etc/ANT/include/cuts.build:
